--- a/app/src/main/res/layout/bottom_sheet_error_loc.xml
+++ b/app/src/main/res/layout/bottom_sheet_error_loc.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/success"
+        android:src="@drawable/success"
         android:layout_marginStart="18dp"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"/>
