--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,6 +40,30 @@
         android:textColor="#BCBCBC"
         android:text="Monday, 23-6-2023"
         android:layout_marginTop="8dp"/>
+    <com.twoB.hr.view.CustomSpinner
+        android:id="@+id/spinner_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/spinner_item_bg"
+        android:popupBackground="@drawable/popup_spinner_bg"
+        android:popupElevation="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginTop="20dp"
+        android:dropDownVerticalOffset="70dp"
+        android:dropDownWidth="match_parent"
+         />
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toEndOf="@+id/spinner_item"
+        app:layout_constraintTop_toBottomOf="@+id/txt" />
     <ImageView
         android:id="@+id/finger_print_img"
         android:layout_width="wrap_content"
@@ -47,8 +71,8 @@
         android:background="@drawable/fingerprint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner_item"
+        android:layout_marginTop="25dp"/>
     <ImageView
         android:id="@+id/location_img"
         android:layout_width="wrap_content"
@@ -58,13 +82,14 @@
         app:layout_constraintEnd_toStartOf="@+id/location_txt"
         app:layout_constraintTop_toBottomOf="@+id/finger_print_img"
         android:layout_marginEnd="3dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintHorizontal_chainStyle="packed"/>
+        android:layout_marginTop="25dp"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintVertical_chainStyle="packed"/>
     <TextView
         android:id="@+id/location_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/error_img"
         app:layout_constraintStart_toEndOf="@id/location_img"
         android:layout_marginStart="3dp"
         app:layout_constraintTop_toBottomOf="@+id/finger_print_img"
@@ -72,7 +97,18 @@
         android:fontFamily="@font/almarai_bold"
         android:textColor="@color/purple_500"
         android:textSize="15sp"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="25dp"/>
+    <ImageView
+        android:id="@+id/error_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/error_loc"
+        app:layout_constraintStart_toEndOf="@+id/location_txt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/finger_print_img"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintHorizontal_chainStyle="packed" />
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
