--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="purple_200">#FFFFFF</color>
     <color name="purple_500">#F37021</color>
     <color name="purple_700">#FFFFFF</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#F37021</color>
+    <color name="teal_700">#F37021</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_5001">#80F37021</color>
